--- a/readme.html
+++ b/readme.html
@@ -1,1 +1,2 @@
 In this project i learn how to use an existing theme and make an Ecommerce Website.
+![Screenshot 2023-02-04 at 1 37 53 PM](https://user-images.githubusercontent.com/73433452/216770915-ade66268-7fc4-42e5-8b79-d811d45f9aed.png)
